@@ -3,6 +3,7 @@ Revision history for Perl extension Devel::SizeMe.
 0.08
 
  * Don't follow method cache entries, thanks to Rafael Garcia-Suarez.
+ * Whine less verbosely and more informatively
 
 0.07 2013-01-10 Tim Bunce
 
